--- a/html/buscaFilme.html
+++ b/html/buscaFilme.html
@@ -22,9 +22,7 @@
   <!-- JS para o header -->
   <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script defer src="../javascript/mobile-navbar.js"></script>
-  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-    crossorigin="anonymous"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
   <script defer src="https://kit.fontawesome.com/611a588430.js" crossorigin="anonymous"></script>
 
   <!--Referenciando os arquivos .css-->
@@ -51,76 +49,11 @@
       </div>
 
       <ul class="nav-list">
-        <li><a data-toggle="modal" id="logado" href="#"></a></li>
+        <li><a data-toggle="modal" id="logado"></a></li>
         <li><a href="./contato.html">QUEM SOMOS</a></li>
         <li><button id="btn-sair">Sair</button></li>
       </ul>
     </nav>
-
-    <!--MODAL Login-->
-    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Login</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <label for="recipient-name" class="col-form-label">Insira seu e-mail:</label>
-                <input type="text" class="form-control" id="recipient-name" placeholder="Seu e-mail">
-              </div>
-              <div class="form-group">
-                <label for="message-text" class="col-form-label">Insira sua senha:</label>
-                <!--inserido para teste-->
-                <input type="password" class="form-control" id="message-text">
-                <!--textarea class="form-control" id="message-text"></textarea-->
-                <!--removido para teste-->
-              </div>
-
-              <a href="#modalEsqueciASenha">Esqueci a senha</a>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-            <button type="button" class="btn btn-warning">Entrar</button>
-            <!--data-dismiss="modal" fecha o modal-->
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!--MODAL - Esqueci a Senha-->
-    <div class="modal fade" id="modalEsqueciASenha" tabindex="-1" aria-labelledby="exampleModalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Esqueci a senha</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <label for="recipient-name" class="col-form-label">Insira seu e-mail:</label>
-                <input type="text" class="form-control" id="recipient-name" placeholder="Seu e-mail">
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-            <button type="button" class="btn btn-warning">Recupear senha</button>
-            <!--data-dismiss="modal" fecha o modal-->
-          </div>
-        </div>
-      </div>
-    </div>
-
   </header>
 
   <main>
@@ -135,10 +68,10 @@
 
       <div class="informacoes">
         <!-- Envolver a imagem com uma ancora para clicar e levar a pagina de informação do filme -->
-        <img class="mediaImg" id="poster-filmes" src="../img/roloDeFilme.jfif" alt="">
+        <img class="mediaImg" id="poster-filmes" src="../img/logo.jpg" alt="">
         <div class="mediaBody">
           <h4 id="titulo-filme">Nome do Filme aparecerá aqui</h4>
-          <p>Breve sinopse do Filme aparecerá aqui.</p>
+          <p></p>
           <button id="mais-sobre-filmes"> + Informações</button>
         </div>
 
@@ -178,11 +111,7 @@
         <img class="poster-descricao" src="../img/roloDeFilme.jfif" alt="">
       </div>
     </div> 
-    </div>
-      
-
-
-
+  </div>
 </body>
 
 </html>
