--- a/html/recuperarSenha.html
+++ b/html/recuperarSenha.html
@@ -5,11 +5,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  
+  <!--Referenciando os arquivos .css-->
+    <!-- Link da Fontes-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/recuperarSenha.css">
   <link rel="stylesheet" href="../css/obrigatorios.css">
   <link rel="shortcut icon" href="../img/logo.jpg">
+
+  <!--Referenciando os arquivos .js-->
   <script defer src="../javascript/Recupera senha/recuperaSenha.js" defer></script>
+
+   <!-- JS para o header -->
+   <script defer src="../javascript/mobile-navbar.js"></script>
+   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
   <title>Esqueci minha senha</title>
 </head>
 
@@ -19,7 +33,7 @@
     <nav>
       <div class="box-logo">
         <img src="../img/logo.jpg" alt="Logo da ResiliaFlix" class="img-logo">
-        <a class="logo" href="./index.html">RESILIA<span>FLIX</span></a>
+        <a class="logo" href="../index.html">RESILIA<span>FLIX</span></a>
       </div>
 
       <div class="mobile-menu">
@@ -29,9 +43,9 @@
       </div>
       <ul class="nav-list">
         <!--li><a href="#">HOME</a></li-->
-        <li><a href="./html/cadastro.html">CADASTRAR</a></li>
-        <li><a href="./html/contato.html">QUEM SOMOS</a></li>
-        <li><a href="./html/buscaFilme.html"><i class="fas fa-search"></i></a></li>
+        <li><a href="./cadastro.html">CADASTRAR</a></li>
+        <li><a href="./contato.html">QUEM SOMOS</a></li>
+        <li><a href="./buscaFilme.html"><i class="fas fa-search"></i></a></li>
       </ul>
     </nav>
   </header>
@@ -42,7 +56,7 @@
     <section class="container">
       <form>
         <div class="form-group">
-          <label id="label-recupera-senha" for="input-recupera-senha">Insrira seu e-mail </label>
+          <label id="label-recupera-senha" for="input-recupera-senha">Insira seu e-mail </label>
           <input type="email" class="form-control" id="input-recupera-senha" placeholder="Seu email">
         </div>
         <div id="msg-success"></div>
